force-app/main/default/objects/Maintenance__c/Maintenance__c.object-meta.xml
<CustomObject>
    <label>Maintenance</label>
    <nameField>
        <label>Maintenance</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>