force-app/main/default/objects/Maintenance__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Maintenances</relationshipLabel>
    <relationshipName>Maintenances</relationshipName>
    <type>Lookup</type>
</CustomField>