force-app/main/default/objects/Maintenance__c/fields/Showroom__c.field-meta.xml
<CustomField>
    <fullName>Showroom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Showroom</label>
    <referenceTo>Showroom__c</referenceTo>
    <relationshipLabel>Maintenances</relationshipLabel>
    <relationshipName>Maintenances</relationshipName>
    <type>Lookup</type>
</CustomField>